<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drl_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            tools:context="com.tlcn.mvpapplication.mvp.main.view.MainActivity" />

        <RelativeLayout
            android:id="@+id/rl_location"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/rlt_search"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/oval_imv_grey"
            android:gravity="center"
            android:padding="1dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imv_location"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_location" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:orientation="vertical">

            <io.github.kobakei.materialfabspeeddial.FabSpeedDial
                android:id="@+id/fsd_floating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_fabBackgroundColor="@color/color_main"
                app:fab_fabDrawableTint="@color/white"
                app:fab_menu="@menu/menu_fab"
                app:fab_miniFabTextColor="@color/color_main" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rlt_search"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_background_imageview_menu">

            <FrameLayout
                android:id="@+id/rlt_drawer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true">

                <ImageView
                    android:id="@+id/imv_menu"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_menu_main" />

                <ImageView
                    android:id="@+id/imv_back"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_arrow_back_main"
                    android:visibility="gone" />
            </FrameLayout>

            <com.tlcn.mvpapplication.custom_view.EditTextCustom
                android:id="@+id/edit_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/rlt_drawer"
                android:backgroundTint="@color/white"
                android:ellipsize="end"
                android:hint="@string/search_location" />
        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcv_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlt_search"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white"
            android:visibility="gone" />
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        app:menu="@menu/menu_navigation"
        android:id="@+id/nv_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start">

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>