...
    <string name="menu_fab_mucdo">Mức độ kẹt xe</string>

    <string name="contribution">Đóng góp</string>
    <string name="home">Trang chủ</string>
    <string name="favourite">Quan tâm</string>
    <string name="news">Tin tức</string>
    <string name="home_login_facebook">Đăng nhập với Facebook"</string>

    <string name="search_location">Tìm kiếm địa điểm</string>

    <!-- TIME TYPE -->
    <string name="second">giây</string>
    <string name="minute">phút</string>
...
    <string name="guide">Hướng dẫn</string>
    <string name="start">Start</string>
    <string name="anonymous">Ẩn danh</string>
    <string name="please_login">Vui lòng đăng nhập để sử dụng chức năng này!</string>
    <string name="string_day_of_week">Theo thứ</string>
    <string name="hour_of_day">Theo giờ</string>
    <string name="ok">OK</string>
    <string name="latest_image">Hình ảnh mới nhất</string>
    <string name="you_need_upload_with_image">Bạn cần đăng kèm hình ảnh!</string>
    <string name="haven_error_please_check">Đã có lỗi xảy ra, vui lòng kiểm tra lại!</string>
    <string name="detail">Chi Tiết</string>
    <string name="close_time">Đóng (%d)</string>

...
