...
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/background_header_navigation">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_centerInParent="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/custom_background_button_login"
...
