...
                android:paddingTop="14dp"
                android:text="@string/cancel"
                android:textColor="@color/black"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grey_divider"
                android:gravity="center"
                android:text="@string/ok"
...
